Include statement, improvements